--- a/styles/mailerlite-new.css
+++ b/styles/mailerlite-new.css
@@ -1,7 +1,6 @@
 #mailerlite-mars {
   width: 568px;
   margin: var(--spacing-xmedium) 0 0 0;
-  height: 90px;
 }
 
 @media (max-width: 948px) {
@@ -17,7 +16,6 @@
 #mailerlite-mars > #mlb2-7142255.ml-form-embedContainer .ml-form-embedWrapper.embedForm {
   width: 100%;
   max-width: 100%;
-  height: 90px;
 }
 
 #mailerlite-mars
